kubernetes/addons/prometheus-stack/sample/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
  - port: 80
    targetPort: 80

---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: myingress
#   labels:
#     name: myingress
# spec:
#   ingressClassName: ingress-nginx-class
#   rules:
#   - http:
#       paths:
#       - pathType: Prefix
#         path: "/"
#         backend:
#           service:
#             name: <Service>
#             port: 
#               number: <Port>
