kubernetes/addons/prometheus-stack/sample/ingress-path.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-stack-ingress
  namespace: monitoring
  annotations:
    # nginx.ingress.kubernetes.io/auth-type: basic
    # nginx.ingress.kubernetes.io/auth-secret: prometheus-basic-auth
    # nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
    nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    name: prometheus-stack-ingress
spec:
  ingressClassName: ingress-nginx-class
  rules:
  - http:
      paths:
      - pathType: ImplementationSpecific
        path: /grafana(/|$)(.*)
        backend:
          service:
            name: prometheus-grafana
            port: 
              number: 80
      - pathType: ImplementationSpecific
        path: /alertmanager(/|$)(.*)
        backend:
          service:
            name: prometheus-kube-prometheus-alertmanager
            port: 
              number: 9093
      - pathType: ImplementationSpecific
        path: /prometheus(/|$)(.*)
        backend:
          service:
            name: prometheus-kube-prometheus-prometheus
            port: 
              number: 9090
